Updated project to UE5

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,7 +31,7 @@ r.Mobile.ReflectionCaptureCompression=False
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.ForwardShading=True
 r.VertexFoggingForOpaque=True
-r.AllowStaticLighting=True
+r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.GenerateMeshDistanceFields=False
 r.DistanceFieldBuild.EightBit=False
@@ -118,6 +118,8 @@ VisualizeCalibrationColorMaterialPath=None
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=None
 r.Mobile.SupportGPUScene=1
+r.AntiAliasingMethod=3
+r.Mobile.AntiAliasing=3
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -351,4 +353,18 @@ FFRLevel=FFR_Medium
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/Passthrough_Example")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/Passthrough_Example")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=8959FFA1473AE108841759AF2BAB556D
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
