Updated project, added example material for scene alpha.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,7 +31,7 @@ r.Mobile.ReflectionCaptureCompression=False
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.ForwardShading=True
 r.VertexFoggingForOpaque=True
-r.AllowStaticLighting=True
+r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.GenerateMeshDistanceFields=False
 r.DistanceFieldBuild.EightBit=False
@@ -43,7 +43,7 @@ r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=3
 r.CustomDepthTemporalAAJitter=True
-r.PostProcessing.PropagateAlpha=0
+r.PostProcessing.PropagateAlpha=2
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
@@ -168,6 +168,7 @@ MinSampleRate=0.000000
 CompressionQualityModifier=0.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.epicgames.[PROJECT]
